--- a/Twitchdeck.OBSLink/Twitchdeck.OBSLink.fsproj
+++ b/Twitchdeck.OBSLink/Twitchdeck.OBSLink.fsproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Twitchdeck.OBSWebsockets\Twitchdeck.OBSWebsockets.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.3" />
+  </ItemGroup>
+
 </Project>
