--- a/Twitchdeck.OBSWebsockets.Test/Twitchdeck.OBSWebsockets.Test.fsproj
+++ b/Twitchdeck.OBSWebsockets.Test/Twitchdeck.OBSWebsockets.Test.fsproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FsUnit.xUnit" Version="3.2.0" />
+    <PackageReference Include="FsCheck.Xunit" Version="2.13.0" />
+    <PackageReference Include="FsUnit.xUnit" Version="3.4.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -24,6 +25,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Twitchdeck.OBSWebsockets\Twitchdeck.OBSWebsockets.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.3" />
   </ItemGroup>
 
 </Project>
