--- a/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
+++ b/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
@@ -15,9 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="Chiron" Version="6.3.1" />
-    <PackageReference Include="FsCheck.Xunit" Version="2.12.1" />
     <PackageReference Include="FSharp.Data" Version="3.0.0" />
     <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.3" />
   </ItemGroup>
 
 </Project>
