--- a/Twitchdeck.iOS/packages.config
+++ b/Twitchdeck.iOS/packages.config
@@ -2,12 +2,13 @@
 <packages>
   <package id="Aether" version="8.3.1" targetFramework="xamarinios10" />
   <package id="Chiron" version="6.3.1" targetFramework="xamarinios10" />
-  <package id="Fabulous.Core" version="0.25.0" targetFramework="xamarinios10" />
-  <package id="Fabulous.LiveUpdate" version="0.25.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.Core" version="0.27.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.CustomControls" version="0.27.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.LiveUpdate" version="0.27.0" targetFramework="xamarinios10" />
   <package id="FParsec" version="1.0.3" targetFramework="xamarinios10" />
-  <package id="FSharp.Core" version="4.5.2" />
+  <package id="FSharp.Core" version="4.5.3" targetFramework="xamarinios10" />
   <package id="FSharp.Data" version="3.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" />
@@ -54,5 +55,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Essentials" version="0.6.0-preview" />
-  <package id="Xamarin.Forms" version="3.3.0.967583" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.4.0.1008975" targetFramework="xamarinios10" />
 </packages>
